Workflow steps test

--- a/.github/workflows/development_deploy.yml
+++ b/.github/workflows/development_deploy.yml
@@ -27,22 +27,22 @@ jobs:
           with:
             args: zip -qq -r ./bundle.zip ./
         - name: Deploy to AWS Lambda
-          uses: yvesgurcan/deploy-lambda-function
+          uses: yvesgurcan/deploy-lambda-function@0.0.5
           with:
             package: bundle.zip
             function-name: subdomainEdgeHandler
             AWS_REGION: ${{ secrets.AWS_REGION }}
             AWS_SECRET_ID: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
             AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-        - name: Update Cloudfront Distribution
-          uses: chaitanyapotti/cloudfront-update-distribution
-          with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: us-east-2
-            cloudfront-distribution-id: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID_DEV }}
-            cloudfront-distribution-config: ${{ env.AWS_CLOUDFRONT_DISTRIBUTION_CONFIG_BASE64_DEV }}
-        - name: Invalidate Cloudfront Cache
-          env:
-            CF_DIST: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID_DEV }}
-          run: aws cloudfront create-invalidation --distribution-id $CF_DIST --paths '/*'
+        # - name: Update Cloudfront Distribution
+        #   uses: chaitanyapotti/cloudfront-update-distribution
+        #   with:
+        #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+        #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+        #     aws-region: us-east-2
+        #     cloudfront-distribution-id: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID_DEV }}
+        #     cloudfront-distribution-config: ${{ env.AWS_CLOUDFRONT_DISTRIBUTION_CONFIG_BASE64_DEV }}
+        # - name: Invalidate Cloudfront Cache
+        #   env:
+        #     CF_DIST: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID_DEV }}
+        #   run: aws cloudfront create-invalidation --distribution-id $CF_DIST --paths '/*'
