--- a/.github/workflows/development_deploy.yml
+++ b/.github/workflows/development_deploy.yml
@@ -18,7 +18,7 @@ jobs:
             node-version: ${{ matrix.node-version }}
         - name: Build dependencies
           run:
-            npm -i --legacy-peer-deps
+            npm i --legacy-peer-deps
           env:
             CI: true
         - name: Compress source into Zip file
