--- a/.github/workflows/development_deploy.yml
+++ b/.github/workflows/development_deploy.yml
@@ -40,8 +40,12 @@ jobs:
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
             aws-region: us-east-2
             cloudfront-distribution-id: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID_DEV }}
-            cloudfront-distribution-config: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_CONFIG_BASE64_DEV }}
-        - name: Invalidate Cloudfront Cache
+            cloudfront-distribution-config: ${{ secretss.AWS_CLOUDFRONT_DISTRIBUTION_CONFIG_BASE64_DEV }}
+        - name: Invalidate CloudFront Cache
+          uses: chetan/invalidate-cloudfront-action@v2
           env:
-            CF_DIST: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID_DEV }}
-          run: aws cloudfront create-invalidation --distribution-id $CF_DIST --paths '/*'
+            DISTRIBUTION: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID_DEV }}
+            PATHS: "/*"
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
