--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "jest": "^28.1.2"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "lodash": "^4.17.21"
+    "axios": "^0.27.2"
   }
 }
