--- a/.github/workflows/development_deploy.yml
+++ b/.github/workflows/development_deploy.yml
@@ -25,14 +25,14 @@ jobs:
           uses: montudor/action-zip@v1
           with:
             args: zip -qq -r ./bundle.zip ./
-        - name: Deploy to AWS Lambda
-          uses: yvesgurcan/deploy-lambda-function@master
+        - name: Deploy AWS Lambda function
+          uses: appleboy/lambda-action@master
           with:
-            AWS_SECRET_ID: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-            AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-            AWS_REGION: us-east-1
-            function-name: subdomainEdgeHandler
-            package: bundle.zip
+            aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+            aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+            aws_region: us-east-1
+            function_name: subdomainEdgeHandler
+            zip_file: bundle.zip
         - name: Update Cloudfront Distribution
           uses: chaitanyapotti/cloudfront-update-distribution@master
           with:
